--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Web電卓</title>
 	<link rel="stylesheet" href="style.css">
+	<script src="jquery-3.6.0.min.js"></script>
 </head>
 <body>
 	<script src="main.js"></script>
