--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Web電卓</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="shortcut icon" href="./favicon.ico" type="image/vnd.microsoft.icon" />
-	<link rel="icon" href="./favicon.ico" type="image/vnd.microsoft.icon" />
+	<link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
+	<link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
 	<script src="jquery-3.6.0.min.js"></script>
 </head>
 <body>
