--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +11,19 @@
 	<link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
 	<script src="jquery-3.6.0.min.js"></script>
 </head>
+
 <body>
+	<header>
+		<nav class="header_nav">
+			<li class="header_list"><a href="#" class="header_link">使い方</a></li>
+			<li class="header_list"><a href="#" class="header_link">お問い合わせ</a></li>
+		</nav>
+		<div class="title">
+			<img src="images/title.png" id="title_image"><br>
+			<h3>分数などを扱える電卓</h3>
+		</div>
+	</header>
 	<script src="main.js"></script>
 </body>
+
 </html>
