ヘッダーの変更

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
 <body>
 	<header>
 		<nav class="header_nav">
-			<li class="header_list"><a href="#" class="header_link">使い方</a></li>
-			<li class="header_list"><a href="#" class="header_link">お問い合わせ</a></li>
+			<ul class="header_nav">
+				<li class="header_list"><a href="#" class="header_link">使い方</a></li>
+				<li class="header_list"><a href="#" class="header_link">お問い合わせ</a></li>
+			</ul>
 		</nav>
-		<div class="title">
-			<img src="images/title.png" id="title_image"><br>
-			<h3>分数などを扱える電卓</h3>
+		<div id="title">
+			<img src="images/title.png" id="title_image">
+			<strong>分数などを扱える電卓</strong>
 		</div>
 	</header>
 	<script src="main.js"></script>
