フッターの追加と見出しの追加、計算スクリプトを追加.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,31 @@
 		</nav>
 		<div id="title">
 			<img src="images/title.png" id="title_image">
-			<strong>分数などを扱える電卓</strong>
+			<strong class="header_strong">分数などを扱える電卓</strong>
 		</div>
 	</header>
+	<h1>さあ、高機能な電卓を使ってみよう。</h1>
+	<p class="center_p">ボタンを押すと計算できます。いろいろな計算をしてみましょう。</p>
+	<main>
+
+	</main>
+
+
+	<footer>
+		<p class="footer_1">
+			<span class="footer_span">Web電卓</span>
+			<a href="#" class="footer_a">トップ</a>
+			<a href="#" class="footer_a">使い方</a>
+			<a href="#" class="footer_a">お問い合わせ</a>
+		</p>
+		<p class="footer_p">
+			Version: 0.0
+			<span class="margin-left_div">最終更新日: 2021/6/2</span>
+			<span class="margin-left_div copy">&copy; Copyright 2021 rio</span>
+		</p>
+	</footer>
 	<script src="main.js"></script>
+	<script src="calc.js"></script>
 </body>
 
 </html>
