--- a/index.html
+++ b/index.html
@@ -16,22 +16,24 @@
 	<header>
 		<nav class="header_nav">
 			<ul class="header_nav">
-				<li class="header_list"><a href="#" class="header_link">使い方</a></li>
-				<li class="header_list"><a href="#" class="header_link">お問い合わせ</a></li>
+				<li class="header_list"><a href="#howUse" class="header_link">使い方</a></li>
+				<li class="header_list"><a href="#5w1h" class="header_link">お問い合わせ</a></li>
 			</ul>
 		</nav>
 		<div id="title">
-			<img src="images/title.png" id="title_image">
+			<img src="images/title.png" id="title_image" alt="Web電卓 タイトル画像">
 			<strong class="header_strong">分数などを扱える電卓</strong>
 		</div>
 	</header>
-	<noscript>このサイトではJavaScriptを利用しております。</noscript>
+	<noscript id="alert">このサイトではJavaScriptを利用しております。</noscript>
 	<h1>さあ、高機能な電卓を使ってみよう。</h1>
 	<p class="center_p">ボタンを押すと計算できます。いろいろな計算をしてみましょう。</p>
 	<main id="main">
-		<div id="answer"><div id="cursor"></div></div>
+		<div id="answer">
+			<noscript>JavaScriptを有効にしてください。</noscript>
+		</div>
 		<div class="settings">
-			<h2>設定</h2>
+			<h2 id="setting_h2">設定</h2>
 			<input type="checkbox" name="checkbox1" id="on1">
 			<label for="on1">テスト</label>
 		</div>
@@ -51,22 +53,41 @@
 			<button onclick="calcMode('*')" class="greenButton">&times;</button><br>
 			<button onclick="clickNum(0)" class="blueButton">0</button>
 			<button onclick="clickNum('.')" class="blueButton">.</button>
-			<button onclick="clickNum(3.14)" class="blueButton">π</button>
+			<button onclick="clickNum(3.14)" class="blueButton">&pi;</button>
 			<button onclick="calcMode('/')" class="greenButton">&divide;</button>
 			<button onclick="showAnswer()" class="pinkButton">=</button><br>
 		</div>
 	</main>
+	<section id="howUse">
+		<h2>使い方</h2>
+	</section>
+	<section id="5w1h">
+		<h2>お問い合わせ</h2>
+		<p>問い合わせる前に...</p>
+		<h3>よくありそうな質問</h3>
+		<p>それでもわからない場合は</p>
+		<iframe
+		src="https://docs.google.com/forms/d/e/1FAIpQLScJezvYKizirmeFHnASJ0DIIRz7payZHYKDvZvqZYcoUbkyJQ/viewform?embedded=true"
+		width="100%" height="980px" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+	</section>
 	<footer>
 		<p class="footer_1">
 			<span class="footer_span">Web電卓</span>
 			<a href="#" class="footer_a">トップ</a>
-			<a href="#" class="footer_a">使い方</a>
-			<a href="#" class="footer_a">お問い合わせ</a>
+			<a href="#howUse" class="footer_a">使い方</a>
+			<a href="#5w1h" class="footer_a">お問い合わせ</a>
+			<a href="https://github.com/Rio-Gunawan/calc-web" class="footer_a" target="_blank"
+				rel="noopener noreferrer">Web電卓のソースコード</a>
 		</p>
 		<p class="footer_p">
 			Version: 0.1&alpha; (Alpha version)
 			<span class="margin-left_div">最終更新日: 2021/6/2</span>
 			<span class="margin-left_div copy">&copy; Copyright 2021 rio</span>
+		</p>
+		<p class="footer_3">
+			このサイトは、<a href="https://pages.github.com/" target="_blank" rel="noopener noreferrer">Github
+				pages</a>を利用して作成しています。
+			Githubが作成、もしくは承認されたWebサイトではありません。
 		</p>
 	</footer>
 	<script src="main.js"></script>
