フォントの変更

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
     <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500&display=swap" rel="stylesheet">
     <script src="jquery-3.6.0.min.js"></script>
 </head>
 
@@ -93,8 +96,8 @@
                 rel="noopener noreferrer">Web電卓のソースコード</a>
         </p>
         <p class="footer_p">
-            Version: 0.2&alpha; (Alpha version)
-            <span class="margin-left_div">最終更新日: 2021/10/13</span>
+            Version: 0.3&alpha; (Alpha version)
+            <span class="margin-left_div">最終更新日: 2021/10/14</span>
             <span class="margin-left_div copy">&copy; Copyright 2021 rio</span>
         </p>
         <p class="footer_3">
