Noscriptとフォントの変更

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Livvic&display=swap" rel="stylesheet">
     <script src="jquery-3.6.0.min.js"></script>
 </head>
 
@@ -41,7 +42,9 @@
             <span class="inner_line" id="line3"></span>
         </div> -->
     </header>
-    <noscript id="alert">このサイトではJavaScriptを利用しております。</noscript>
+    <noscript id="alert">このサイトではJavaScriptを利用しております。<br>
+        このサイト(特に電卓)を利用するにはJavascriptを有効にしてください。<br>
+        ブラウザによって設定方法が異なります。</noscript>
     <h1>さあ、高機能な電卓を使ってみよう。</h1>
     <p class="center_p">ボタンを押すと計算できます。いろいろな計算をしてみましょう。</p>
     <main id="main">
