レスポンシブ対応

--- a/index.html
+++ b/index.html
@@ -18,29 +18,20 @@
 
 <body>
     <header>
+        <div class="openBtn"><span></span><span></span><span></span></div>
         <nav class="header_nav" id="header_nav">
-            <ul class="header_nav" id="header_list">
-                <li class="header_list"><a href="#howUse" class="header_link">使い方</a></li>
-                <li class="header_list"><a href="#5w1h" class="header_link">お問い合わせ</a></li>
-            </ul>
+            <div id="g-nav-list">
+                <!--ナビの数が増えた場合縦スクロールするためのdiv※不要なら削除-->
+                <ul class="header_nav" id="header_list">
+                    <li class="header_list"><a href="#howUse" class="header_link">使い方</a></li>
+                    <li class="header_list"><a href="#5w1h" class="header_link">お問い合わせ</a></li>
+                </ul>
+            </div>
         </nav>
         <img src="images/favicon.png" id="title_icon" alt="Web電卓 アイコン">
         <div id="title">
             <img src="images/title.png" id="title_image" alt="Web電卓 タイトル画像">
             <strong class="header_strong">分数などを扱える電卓</strong>
-            <!-- </div>
-        スマホ用のハンバーガーメニュー
-        <div id="hamburger">
-
-            1番上の線 
-            <span class="inner_line" id="line1"></span>
-
-            <真ん中の線
-            <span class="inner_line" id="line2"></span>
-
-            1番下の線
-            <span class="inner_line" id="line3"></span>
-        </div> -->
     </header>
     <noscript id="alert">このサイトではJavaScriptを利用しております。<br>
         このサイト(特に電卓)を利用するにはJavascriptを有効にしてください。<br>
@@ -99,9 +90,9 @@
                 rel="noopener noreferrer">Web電卓のソースコード</a>
         </p>
         <p class="footer_p">
-            Version: 0.3&alpha; (Alpha version)
-            <span class="margin-left_div">最終更新日: 2021/10/14</span>
-            <span class="margin-left_div copy">&copy; Copyright 2021 rio</span>
+            Version: 0.4&alpha; (Alpha version)
+            <span class="margin-left_div">最終更新日: 2021/10/16 (土)</span>
+            <span class="margin-left_div copy">&copy; <span class="noLivvic">Copyright</span> 2021 rio</span>
         </p>
         <p class="footer_3">
             このサイトは、<a href="https://pages.github.com/" target="_blank" rel="noopener noreferrer">Github
