フォントの太さの調整

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Livvic&display=swap" rel="stylesheet">
     <script src="jquery-3.6.0.min.js"></script>
 </head>
@@ -51,19 +51,19 @@
             <button onclick="clickNum(1)" class="blueButton">1</button>
             <button onclick="clickNum(2)" class="blueButton">2</button>
             <button onclick="clickNum(3)" class="blueButton">3</button>
-            <button onclick="calcMode('+')" class="greenButton">+</button>
+            <button onclick="calcMode('+')" class="greenButton">&plus;</button>
             <button onclick="clearText()" class="pinkButton">AC</button><br>
             <button onclick="clickNum(4)" class="blueButton">4</button>
             <button onclick="clickNum(5)" class="blueButton">5</button>
             <button onclick="clickNum(6)" class="blueButton">6</button>
-            <button onclick="calcMode('-')" class="greenButton">-</button><br>
+            <button onclick="calcMode('-')" class="greenButton">&minus;</button><br>
             <button onclick="clickNum(7)" class="blueButton">7</button>
             <button onclick="clickNum(8)" class="blueButton">8</button>
             <button onclick="clickNum(9)" class="blueButton">9</button>
             <button onclick="calcMode('*')" class="greenButton">&times;</button><br>
             <button onclick="clickNum(0)" class="blueButton">0</button>
             <button onclick="clickNum('.')" class="blueButton">.</button>
-            <button onclick="clickNum(3.14)" class="blueButton">&pi;</button>
+            <button onclick="clickNum(Math.PI)" class="blueButton">&pi;</button>
             <button onclick="calcMode('/')" class="greenButton">&divide;</button>
             <button onclick="showAnswer()" class="pinkButton">=</button><br>
         </div>
