--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
             Githubが作成、もしくは承認されたWebサイトではありません。
         </p>
     </footer>
-    <script src="main.js"></script>
-    <script src="calc.js"></script>
+    <script src='node_modules/bignumber.js/bignumber.min.js'></script>
+    <script src="main.js" type="text/javascript"></script>
+    <script src="calc.js" type="text/javascript"></script>
 </body>
 
 </html>
