--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             Githubが作成、もしくは承認されたWebサイトではありません。
         </p>
     </footer>
-    <script src='node_modules/bignumber.js/bignumber.min.js'></script>
+    <script src='bignumber.js/bignumber.min.js'></script>
     <script src="main.js" type="text/javascript"></script>
     <script src="calc.js" type="text/javascript"></script>
 </body>
