--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 rel="noopener noreferrer">Web電卓のソースコード</a>
         </p>
         <p class="footer_p">
-            Version: 0.2&alpha; (Alpha version)
-            <span class="margin-left_div">最終更新日: 2021/10/19 (火)</span>
+            Version: 0.3&alpha; (Alpha version)
+            <span class="margin-left_div">最終更新日: 2021/10/25 (月)</span>
             <span class="margin-left_div copy">&copy; <span class="noLivvic">Copyright</span> 2021 rio</span>
         </p>
         <p class="footer_3">
