--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
                 rel="noopener noreferrer">Web電卓のソースコード</a>
         </p>
         <p class="footer_p">
-            Version: 0.3&alpha; (Alpha version)
+            <span>Version: 0.3&alpha; (Alpha version)</span>
             <span class="margin-left_div">最終更新日: 2021/10/25 (月)</span>
             <span class="margin-left_div copy">&copy; <span class="noLivvic">Copyright</span> 2021 rio</span>
         </p>
         <p class="footer_3">
             このサイトは、<a href="https://pages.github.com/" target="_blank" rel="noopener noreferrer">Github
                 pages</a>を利用して作成しています。
-            Githubが作成、もしくは承認されたWebサイトではありません。
+            Githubが作成、もしくは承認されたWebサイトではなく、Githubのユーザーが作ったものです。
         </p>
     </footer>
     <script src='bignumber.js/bignumber.min.js'></script>
