--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </p>
         <p class="footer_p">
             <span>Version: 0.3&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2021/10/25 (月)</span>
+            <span class="margin-left_div">最終更新日: 2021/11/3 (水)</span>
             <span class="margin-left_div copy">&copy; <span class="noLivvic">Copyright</span> 2021 rio</span>
         </p>
         <p class="footer_3">
