webフォント対応とタイトル変更。

--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web電卓</title>
+    <title>Web電卓 - 分数などを扱える高機能な電卓</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
     <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Livvic&display=swap" rel="stylesheet">
     <script src="jquery-3.6.0.min.js"></script>
 </head>
 
@@ -37,8 +33,8 @@
     <noscript id="alert">このサイトではJavaScriptを利用しております。<br>
         このサイト(特に電卓)を利用するにはJavascriptを有効にしてください。<br>
         ブラウザによって設定方法が異なります。</noscript>
-    <h1>さあ、高機能な電卓を使ってみよう。</h1>
-    <p class="center_p">ボタンを押すと計算できます。いろいろな計算をしてみましょう。</p>
+    <h1>分数も使える、高機能な関数電卓</h1>
+    <p class="center_p">ボタンを押して計算をしてみましょう。詳しい使い方はスクロールすると見れます。</p>
     <main id="main">
         <div id="answer">
             <noscript>JavaScriptを有効にしてください。</noscript>
@@ -91,7 +87,7 @@
         </p>
         <p class="footer_p">
             <span>Version: 0.3&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2021/11/3 (水)</span>
+            <span class="margin-left_div">最終更新日: 2021/11/5 (金)</span>
             <span class="margin-left_div copy">&copy; <span class="noLivvic">Copyright</span> 2021 rio</span>
         </p>
         <p class="footer_3">
