キーボード入力対応

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                 rel="noopener noreferrer">Web電卓のソースコード</a>
         </p>
         <p class="footer_p">
-            <span>Version: 0.3&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2021/11/5 (金)</span>
+            <span>Version: 0.3.8&alpha; (Alpha version)</span>
+            <span class="margin-left_div">最終更新日: 2021/11/6 (土)</span>
             <span class="margin-left_div copy">&copy; <span class="noLivvic">Copyright</span> 2021 rio</span>
         </p>
         <p class="footer_3">
@@ -99,6 +99,7 @@
     <script src='bignumber.js/bignumber.min.js'></script>
     <script src="main.js" type="text/javascript"></script>
     <script src="calc.js" type="text/javascript"></script>
+    <script src="calc copy.js" type="text/javascript"></script>
 </body>
 
 </html>
