--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
     <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
     <script src="jquery-3.6.0.min.js"></script>
 </head>
 
@@ -39,29 +40,46 @@
         <div id="answer">
             <noscript>JavaScriptを有効にしてください。</noscript>
         </div>
-        <div class="settings">
-            <h2 id="setting_h2">設定</h2>
-            <label for="on1" class="on_off"><input type="checkbox" name="checkbox1" id="on1">テスト</label>
-        </div>
-        <div id="buttons">
-            <button onclick="clickNum(1)" class="blueButton">1</button>
-            <button onclick="clickNum(2)" class="blueButton">2</button>
-            <button onclick="clickNum(3)" class="blueButton">3</button>
-            <button onclick="calcMode('+')" class="greenButton">&plus;</button>
-            <button onclick="clearText()" class="pinkButton">AC</button><br>
-            <button onclick="clickNum(4)" class="blueButton">4</button>
-            <button onclick="clickNum(5)" class="blueButton">5</button>
-            <button onclick="clickNum(6)" class="blueButton">6</button>
-            <button onclick="calcMode('-')" class="greenButton">&minus;</button><br>
-            <button onclick="clickNum(7)" class="blueButton">7</button>
-            <button onclick="clickNum(8)" class="blueButton">8</button>
-            <button onclick="clickNum(9)" class="blueButton">9</button>
-            <button onclick="calcMode('*')" class="greenButton">&times;</button><br>
-            <button onclick="clickNum(0)" class="blueButton">0</button>
-            <button onclick="clickNum('.')" class="blueButton">.</button>
-            <button onclick="clickNum(Math.PI)" class="blueButton">&pi;</button>
-            <button onclick="calcMode('/')" class="greenButton">&divide;</button>
-            <button onclick="showAnswer()" class="pinkButton">=</button><br>
+        <div id="white"></div>
+        <nav id="setNav">
+            <div id="setNav-list">
+                <!--ナビの数が増えた場合縦スクロールするためのdiv※不要なら削除-->
+                <ul>
+                    <li><a href="#">Top</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Service</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li>
+                        <div class="settings">
+                            <h2 id="setting_h2">設定</h2>
+                            <label for="on1" class="on_off"><input type="checkbox" name="checkbox1" id="on1">テスト</label>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="downCalc">
+            <div class="humbugger"><span class="material-icons-round md-36">&#xE8B8;</span></div>
+            <div id="buttons">
+                <button onclick="clickNum(1)" class="blueButton">1</button>
+                <button onclick="clickNum(2)" class="blueButton">2</button>
+                <button onclick="clickNum(3)" class="blueButton">3</button>
+                <button onclick="calcMode('+')" class="greenButton">&plus;</button>
+                <button onclick="clearText()" class="pinkButton">AC</button><br>
+                <button onclick="clickNum(4)" class="blueButton">4</button>
+                <button onclick="clickNum(5)" class="blueButton">5</button>
+                <button onclick="clickNum(6)" class="blueButton">6</button>
+                <button onclick="calcMode('-')" class="greenButton">&minus;</button><br>
+                <button onclick="clickNum(7)" class="blueButton">7</button>
+                <button onclick="clickNum(8)" class="blueButton">8</button>
+                <button onclick="clickNum(9)" class="blueButton">9</button>
+                <button onclick="calcMode('*')" class="greenButton">&times;</button><br>
+                <button onclick="clickNum(0)" class="blueButton">0</button>
+                <button onclick="clickNum('.')" class="blueButton">.</button>
+                <button onclick="clickNum(Math.PI)" class="blueButton">&pi;</button>
+                <button onclick="calcMode('/')" class="greenButton">&divide;</button>
+                <button onclick="showAnswer()" class="pinkButton">=</button><br>
+            </div>
         </div>
     </main>
     <section id="howUse">
@@ -86,8 +104,8 @@
                 rel="noopener noreferrer">Web電卓のソースコード</a>
         </p>
         <p class="footer_p">
-            <span>Version: 0.3.8&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2021/11/6 (土)</span>
+            <span>Version: 0.3.9&alpha; (Alpha version)</span>
+            <span class="margin-left_div">最終更新日: 2021/11/13 (土)</span>
             <span class="margin-left_div copy">&copy; <span class="noLivvic">Copyright</span> 2021 rio</span>
         </p>
         <p class="footer_3">
