--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                 rel="noopener noreferrer">Web電卓のソースコード</a>
         </p>
         <p class="footer_p">
-            <span>Version: 0.3.9&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2021/11/13 (土)</span>
+            <span>Version: 0.4.1&alpha; (Alpha version)</span>
+            <span class="margin-left_div">最終更新日: 2021/11/14 (日)</span>
             <span class="margin-left_div copy">&copy; <span class="noLivvic">Copyright</span> 2021 rio</span>
         </p>
         <p class="footer_3">
