ロゴの変更

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                 rel="noopener noreferrer">Web電卓のソースコード</a>
         </p>
         <p class="footer_p">
-            <span>Version: 0.4.3&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2021/11/15 (月)</span>
+            <span>Version: 0.4.4&alpha; (Alpha version)</span>
+            <span class="margin-left_div">最終更新日: 2021/11/20 (土)</span>
             <span class="margin-left_div copy">&copy; <span class="noLivvic">Copyright</span> 2021 rio</span>
         </p>
         <p class="footer_3">
