ボタンのサイズの変更と、ヘッダーを透明に

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </section>
     <iframe
         src="https://docs.google.com/forms/d/e/1FAIpQLScJezvYKizirmeFHnASJ0DIIRz7payZHYKDvZvqZYcoUbkyJQ/viewform?embedded=true"
-        frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+        marginheight="0" marginwidth="0">読み込んでいます…</iframe>
     <footer>
         <p class="footer_1">
             <span class="footer_span">Web電卓</span>
@@ -108,8 +108,8 @@
                 rel="noopener noreferrer">Web電卓のソースコード</a>
         </p>
         <p class="footer_p">
-            <span>Version: 0.4.4&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2021/11/21 (日)</span>
+            <span>Version: 0.4.5&alpha; (Alpha version)</span>
+            <span class="margin-left_div">最終更新日: 2021/11/28 (日)</span>
             <span class="margin-left_div copy">&copy; <span class="noLivvic">Copyright</span> 2021 rio</span>
         </p>
         <p class="footer_3">
