電卓のデザインを変更

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             <noscript>JavaScriptを有効にしてください。</noscript>
         </div>
         <div id="white"></div>
+        <div id="black-line"></div>
+        <div id="gray"></div>
         <nav id="setNav">
             <div id="setNav-list">
                 <!--ナビの数が増えた場合縦スクロールするためのdiv※不要なら削除-->
@@ -61,7 +63,7 @@
             </div>
         </nav>
         <div class="downCalc">
-            <div class="humbugger"><span class="material-icons-round md-36">&#xE8B8;</span></div>
+            <div class="hamburger"><span class="material-icons-round md-36">&#xE8B8;</span></div>
             <div id="buttons">
                 <button onclick="changeCode()" class="greenButton">+/&minus;</button>
                 <button onclick="divHundred()" class="greenButton noLivvic">%</button>
@@ -108,8 +110,8 @@
                 rel="noopener noreferrer">Web電卓のソースコード</a>
         </p>
         <p class="footer_p">
-            <span>Version: 0.4.5&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2021/11/28 (日)</span>
+            <span>Version: 0.4.6&alpha; (Alpha version)</span>
+            <span class="margin-left_div">最終更新日: 2021/12/5 (日)</span>
             <span class="margin-left_div copy">&copy; <span class="noLivvic">Copyright</span> 2021 rio</span>
         </p>
         <p class="footer_3">
