--- a/index.html
+++ b/index.html
@@ -63,7 +63,20 @@
             </div>
         </nav>
         <div class="downCalc">
-            <div class="hamburger"><span class="material-icons-round md-36">&#xE8B8;</span></div>
+            <div class="hamburger">
+                <span class="nav_item" id="functions">
+                    <span class="material-icons-round md-36" title="関数" id="f-b">&#xE24A;</span>
+                    <!--関数(functions)-->
+                </span><br>
+                <span class="nav_item" id="history">
+                    <span class="material-icons-round md-36" title="履歴" id="h-b">&#xE889;</span>
+                    <!--履歴(history)-->
+                </span><br>
+                <span class="nav_item" id="settings">
+                    <span class="material-icons-round md-36" title="設定" id="s-b">&#xE8B8;</span>
+                    <!--設定(settings)-->
+                </span>
+            </div>
             <div id="buttons">
                 <button onclick="changeCode()" class="greenButton">+/&minus;</button>
                 <button onclick="divHundred()" class="greenButton noLivvic">%</button>
@@ -110,8 +123,8 @@
                 rel="noopener noreferrer">Web電卓のソースコード</a>
         </p>
         <p class="footer_p">
-            <span>Version: 0.4.6&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2021/12/5 (日)</span>
+            <span>Version: 0.4.７&alpha; (Alpha version)</span>
+            <span class="margin-left_div">最終更新日: 2021/12/6 (月)</span>
             <span class="margin-left_div copy">&copy; <span class="noLivvic">Copyright</span> 2021 rio</span>
         </p>
         <p class="footer_3">
