--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
     <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <script src="jquery-3.6.0.min.js"></script>
 </head>
 
@@ -21,7 +22,8 @@
                 <ul class="header_nav" id="header_list">
                     <li class="header_list"><a href="#about" class="header_link">multumについて</a></li>
                     <li class="header_list"><a href="#howUse" class="header_link">使い方</a></li>
-                    <li class="header_list"><a href="#5w1h" class="header_link">お問い合わせ</a></li>                </ul>
+                    <li class="header_list"><a href="#5w1h" class="header_link">お問い合わせ</a></li>
+                </ul>
             </div>
         </nav>
         <img src="images/favicon.png" id="title_icon" alt="Web電卓 アイコン">
@@ -50,6 +52,7 @@
                         <div class="functions">
                             <h2 id="setting_h2">関数類</h2>
                             <button onclick="clickNum(Math.PI)" class="blueButton">&pi;</button>
+                            <button onclick="divHundred()" class="greenButton noLivvic">%</button>
                         </div>
                         <div class="settings">
                             <h2 id="setting_h2">設定</h2>
@@ -78,7 +81,8 @@
             </div>
             <div id="buttons">
                 <button onclick="changeCode()" class="greenButton">+/&minus;</button>
-                <button onclick="divHundred()" class="greenButton noLivvic">%</button>
+                <button onclick="backspace()" class="pinkButton downLittle">
+                    <span class="material-icons-outlined downLittleText">&#xE14A;</span></button>
                 <button onclick="clearText(0)" class="pinkButton">C</button>
                 <button onclick="clearText(1)" class="pinkButton">AC</button><br>
                 <button onclick="clickNum(1)" class="blueButton">1</button>
@@ -125,18 +129,24 @@
     <iframe
         src="https://docs.google.com/forms/d/e/1FAIpQLScJezvYKizirmeFHnASJ0DIIRz7payZHYKDvZvqZYcoUbkyJQ/viewform?embedded=true"
         marginheight="0" marginwidth="0">読み込んでいます…</iframe>
-    <footer>
+    <footer id="footer">
+        <p id="page-top"><a href="#"><span class="page-top-text">
+                    <span class="material-icons-round">&#xE5D8;</span><br>
+                    <span id="toTop">トップへ</span></span></a></p>
         <p class="footer_1">
             <span class="footer_span">Web電卓 multum</span>
+        </p>
+        <nav class="footer_nav">
             <a href="#" class="footer_a">トップ</a>
+            <a href="#about" class="footer_a">multumについて</a>
             <a href="#howUse" class="footer_a">使い方</a>
             <a href="#5w1h" class="footer_a">お問い合わせ</a>
             <a href="https://github.com/Rio-Gunawan/calc-web" class="footer_a" target="_blank"
                 rel="noopener noreferrer">multumのソースコード</a>
-        </p>
+        </nav>
         <p class="footer_p">
-            <span>Version: 0.4.8&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2021/12/8 (水)</span>
+            <span>Version: 0.4.9&alpha; (Alpha version)</span>
+            <span class="margin-left_div">最終更新日: 2021/12/11 (土)</span>
             <span class="margin-left_div copy">&copy; <span class="noLivvic">Copyright</span> 2021 rio</span>
         </p>
         <p class="footer_3">
