メイン画像の追加

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     </main>
     <section id="about">
         <h2>multumについて</h2>
+        <img src="images/main.png" class="mainPicture">
         <p>
             Web電卓 multum (ムルトゥム) は、Webで使えるインストール不要の無料電卓アプリです。<br>
             主に、四則演算や分数、あまり、関数類(ルートやn乗など)が使えます。<br>
@@ -147,7 +148,7 @@
         </nav>
         <p class="footer_p">
             <span>Version: 0.4.9&alpha; (Alpha version)</span>
-            <span class="margin-left_div">最終更新日: 2021/12/11 (土)</span>
+            <span class="margin-left_div">最終更新日: 2021/12/12 (日)</span>
             <span class="margin-left_div copy">&copy; <span class="noLivvic">Copyright</span> 2021 rio</span>
         </p>
         <p class="footer_3">
@@ -156,7 +157,7 @@
             Githubが作成、もしくは承認されたWebサイトではなく、Githubのユーザーが作ったものです。
         </p>
     </footer>
-    <script src='bignumber.js/bignumber.min.js'></script>
+    <script src="bignumber.js/bignumber.min.js"></script>
     <script src="main.js"></script>
     <script src="calc.js"></script>
 </body>
